<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<FrameLayout
				android:id="@+id/act_card_editor_flyt_editable_image_frame"
				android:layout_width="175dip"
				android:layout_height="131dip"
				android:layout_marginLeft="20dip"
				android:layout_marginTop="10dip"
				android:background="@drawable/dash_border">

				<TextView
						android:id="@+id/act_card_editor_tv_editable_image_tip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:text="@string/insert_image" />

				<ImageView
						android:id="@+id/act_card_editor_iv_editable_image"
						android:layout_width="match_parent"
						android:layout_height="match_parent" />
		</FrameLayout>

		<FrameLayout
				android:id="@+id/act_card_editor_flyt_editable_voice_frame"
				android:layout_width="175dip"
				android:layout_height="70dip"
				android:layout_alignParentBottom="true"
				android:layout_marginBottom="20dip"
				android:layout_marginLeft="20dip"
				android:background="@drawable/dash_border">

				<TextView
						android:id="@+id/act_card_editor_tv_editable_voice_tip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:text="@string/insert_voice" />

				<LinearLayout
						android:id="@+id/act_card_editor_llyt_editable_voice"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:background="@drawable/voice_message_controller_background"
						android:orientation="horizontal"
						android:visibility="invisible">

						<ImageView
								android:id="@+id/act_card_editor_iv_editable_voice_play_icon"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginRight="10dip"
								android:src="@drawable/icon_play" />

						<TextView
								android:id="@+id/act_card_editor_tv_editable_voice_play_text"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginRight="10dip"
								android:text="@string/play_voice_message"
								android:textColor="@color/white" />
				</LinearLayout>
		</FrameLayout>

		<FrameLayout
				android:id="@+id/act_card_editor_flyt_editable_text_frame"
				android:layout_width="175dip"
				android:layout_height="115dip"
				android:layout_alignParentRight="true"
				android:layout_alignParentTop="true"
				android:layout_marginRight="20dip"
				android:layout_marginTop="10dip"
				android:background="@drawable/dash_border">

				<TextView
						android:id="@+id/act_card_editor_tv_editable_text_tip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:text="@string/insert_text" />

				<TextView
						android:id="@+id/act_card_editor_ret_editable_text"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="@android:color/transparent"
						android:gravity="start"
						android:clickable="true"
						android:visibility="invisible" />
		</FrameLayout>

		<FrameLayout
				android:id="@+id/act_card_editor_flyt_editable_signature_frame"
				android:layout_width="175dip"
				android:layout_height="87dip"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:layout_marginBottom="20dip"
				android:layout_marginRight="20dip"
				android:background="@drawable/dash_border">

				<TextView
						android:id="@+id/act_card_editor_tv_editable_signature_tip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:text="@string/insert_signature" />

				<ImageView
						android:id="@+id/act_card_editor_iv_editable_signature_image"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_gravity="right|bottom" />

		</FrameLayout>

</RelativeLayout>