<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/glb_card_flyt_editable_image_frame"
        android:layout_width="@dimen/card_editable_frames_image_width"
        android:layout_height="@dimen/card_editable_frames_image_height"
        android:layout_marginLeft="@dimen/card_editable_frames_image_left"
        android:layout_marginTop="@dimen/card_editable_frames_image_top" >

        <TextView
            android:id="@+id/glb_card_tv_editable_image_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/insert_image" />

        <ImageView
            android:id="@+id/glb_card_iv_editable_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/glb_card_flyt_editable_voice_frame"
        android:layout_width="@dimen/card_editable_frames_voice_width"
        android:layout_height="@dimen/card_editable_frames_voice_height"
        android:layout_marginLeft="@dimen/card_editable_frames_voice_left"
        android:layout_marginTop="@dimen/card_editable_frames_voice_top" >

        <TextView
            android:id="@+id/glb_card_tv_editable_voice_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/glb_card_tv_editable_voice_tip_textsize"
            android:text="@string/insert_voice" />

        <eoc.studio.voicecard.card.viewer.AudioMessageView
            android:id="@+id/glb_card_amv_editable_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/voice_message_controller_background"
            android:visibility="invisible" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/glb_card_flyt_editable_text_frame"
        android:layout_width="@dimen/card_editable_frames_text_width"
        android:layout_height="@dimen/card_editable_frames_text_height"
        android:layout_marginLeft="@dimen/card_editable_frames_text_left"
        android:layout_marginTop="@dimen/card_editable_frames_text_top" >

        <TextView
            android:id="@+id/glb_card_tv_editable_text_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/insert_text" />

        <TextView
            android:id="@+id/glb_card_tv_editable_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:gravity="start"
            android:visibility="invisible" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/glb_card_flyt_editable_signature_frame"
        android:layout_width="@dimen/card_editable_frames_sign_width"
        android:layout_height="@dimen/card_editable_frames_sign_height"
        android:layout_marginLeft="@dimen/card_editable_frames_sign_left"
        android:layout_marginTop="@dimen/card_editable_frames_sign_top" >

        <TextView
            android:id="@+id/glb_card_tv_editable_signature_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/insert_signature" />

        <ImageView
            android:id="@+id/glb_card_iv_editable_signature_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right|bottom" />
    </FrameLayout>

</RelativeLayout>