<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/header_bg1" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/title_send_news" />

        <Button
            android:id="@+id/backBtnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="14.0dip"
            android:background="@drawable/icon_ar1_left" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/menu_bg2" >

        <RelativeLayout
            android:id="@+id/saveButton"
            android:layout_width="120.0dip"
            android:layout_height="60.0dip"
            android:layout_alignParentLeft="true" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23.0dip"
                android:text="@string/save_image"
                android:textColor="#ffffffff"
                android:textSize="20.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/selectFriendButton"
            android:layout_width="120.0dip"
            android:layout_height="60.0dip"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20.0dip"
                android:text="@string/select_friend"
                android:textColor="#ffffffff"
                android:textSize="20.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sendButton"
            android:layout_width="120.0dip"
            android:layout_height="60.0dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23.0dip"
                android:text="@string/send_news"
                android:textColor="#ffffffff"
                android:textSize="20.0sp" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/mainImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>